# finsecure-banking

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.api  LICENSE  README.md  check_audit.sql  check_mv.sql  demo_risque.sql  demo_top_mcc.sql  docker-compose.yml  plan1.sql  plan2.sql  pyproject.toml  requirements-api.txt  requirements-migration.txt  requirements-ml.txt  run_all_sql.ps1
.github/workflows/: ci.yml
data/: README.md
docs/: architecture_cible.md  cadrage_client.md  guide_reprise.md  phase10_ml.md  phase11_api.md  phase2_implementation.md  phase3_mongodb.md  phase5_docker_compose.md  phase8_tests.md  phase9_cicd.md  plan1_partitionnement.txt  plan2_jointures.txt  plan3_lookup_pk.txt  rapport_technique.md  recap_pedagogique.md  roadmap.md  veille_technologique.md
docs/data_model/: dictionnaire_donnees.md  modele_donnees.md
models/: model_metadata.json
mongo/: 01_create_indexes.js  02_aggregation_pipelines.js  03_demos_soutenance.js  README.md
scripts/: README.md  reset-stack.ps1  start-stack.ps1  stop-stack.ps1  train-model.ps1
sql/: 00_init_for_official_xe.sql  00_init_users_tablespaces.sql  01_grants.sql  02_sequences.sql  03_tables.sql  04_indexes.sql  05_views.sql  06_materialized_views.sql  07_packages_plsql.sql  08_triggers.sql  09_explain_plans.sql  99_cleanup.sql  99_fix_migration.sql  99_fix_migration_v2.sql  README.md
sql/demos/: README.md  bilan_migration.sql  check_partitions.sql  demo_top_cards.sql  plan3.sql  refresh_datamarts.sql
src/api/: README.md  __init__.py  config.py  database.py  main.py  models.py
src/api/routers/: clients.py  datamarts.py  health.py  predict.py  transactions.py
src/migration/: README.md  __init__.py  encryption.py  load_mongo.py  load_oracle.py
src/ml/: __init__.py  features.py  scorer.py  train.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_clients.py  test_datamarts.py  test_health.py  test_predict.py  test_transactions.py
tests/unit/: __init__.py  test_config.py  test_encryption.py  test_features.py  test_models.py  test_scorer.py
