[project]
name = "finsecure-banking"
version = "0.1.0"
description = "Plateforme data bancaire - projet RNCP36739"
requires-python = ">=3.11"
authors = [{ name = "Walter Moume" }]

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Mode asyncio automatique : pas besoin de decorer chaque test
asyncio_mode = "auto"

# Markers personnalises (eviter les warnings PytestUnknownMarkWarning)
markers = [
    "unit: tests unitaires rapides, sans dependance externe",
    "integration: tests necessitant MongoDB sur localhost:27017",
    "slow: tests lents (plus de 1 seconde)",
]

# Affichage
addopts = [
    "--strict-markers",     # rejette les markers non declares
    "--tb=short",           # tracebacks compacts
    "-ra",                  # resume des tests skipped/failed en fin
    "--color=yes",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
    "src/migration/load_oracle.py",  # script CLI, teste manuellement
    "src/migration/load_mongo.py",   # script CLI, teste manuellement
]
branch = true

[tool.coverage.report]
# Affichage
show_missing = true
skip_covered = false
precision = 1

# Pas de seuil bloquant (choix assume : la couverture est un indicateur, pas un gate)
# fail_under = 0

exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# Ruff (linter + formatter)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "htmlcov",
    "data",
    "_oradata_tmp",
    "_dbs_tmp",
]

[tool.ruff.lint]
# Regles activees : un sous-ensemble pragmatique
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade
select = ["E", "W", "F", "I", "B"]
ignore = [
    "E501",  # line too long - on laisse passer (au pire formatteur ralera)
    "B008",  # ne pas utiliser d'appel de fonction dans les defaults (FastAPI Depends incompatible)
]

[tool.ruff.lint.per-file-ignores]
# Tests : on autorise les __init__.py vides et les imports non triés
"tests/*" = ["F401", "F811", "B017"]
"**/__init__.py" = ["F401"]
# Scripts de migration : code legacy fonctionnel, on tolere les imports manquants
# (Optional non importe, zip sans strict). Sera nettoye en V2.
"src/migration/load_oracle.py" = ["F821"]
"src/migration/load_mongo.py" = ["B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

